--- a/res/layout/blood_glucose_form.xml
+++ b/res/layout/blood_glucose_form.xml
@@ -2,44 +2,29 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="2"
-    android:contentDescription="Data of a blood glucose measurement."
-    android:rowCount="4" >
+    android:columnCount="1"
+    android:contentDescription="@string/data_of_a_blood_glucose_measurement_"
+    android:rowCount="2" >
 
-    <DatePicker
-        android:id="@+id/datePicker1"
-        android:layout_height="128dp"
+    <EditText
+        android:id="@+id/datetime"
+        android:layout_width="match_parent"
         android:layout_column="0"
         android:layout_gravity="left|top"
-        android:layout_row="0" />
-
-    <TimePicker
-        android:id="@+id/timePicker1"
-        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:ems="10"
+        android:inputType="text"
+        android:singleLine="true"
+        android:text="2015-01-04 23:48:01" >
+    </EditText>
+    
+    <EditText
+        android:id="@+id/measurement"
+        android:layout_width="match_parent"
         android:layout_column="0"
         android:layout_gravity="left|top"
-        android:layout_row="1" />
-
-    <NumberPicker
-        android:id="@+id/numberPicker1"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:orientation="horizontal" />
-
-    <Button
-        android:id="@+id/buttonOk"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="3"
-        android:text="Ok" />
-
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_column="0"
-        android:layout_gravity="right|top"
-        android:layout_row="3"
-        android:text="Cancel" />
-
+        android:layout_row="1"
+        android:ems="10"
+        android:inputType="text"
+        android:text="100" />
 </GridLayout>
