--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:text="@string/workout_information" />
 
     <Button
-        android:id="@+id/buttonClosePlot"
+        android:id="@+id/buttonClose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonWorkoutInformation"
