--- a/res/layout/activity_plot.xml
+++ b/res/layout/activity_plot.xml
@@ -8,9 +8,8 @@
         android:id="@+id/plot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/buttonClosePlot"
+        android:layout_above="@+id/buttonClose"
         android:layout_below="@+id/buttonBloodGlucoseStats"
-        androidPlot.domainLabel="Domain"
         androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
         androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
         androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
@@ -26,13 +25,11 @@
         androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
         androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
         androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
-        androidPlot.rangeLabel="Range"
         androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
-        androidPlot.title="A Simple XY Plot"
         androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size" />
 
     <Button
-        android:id="@+id/buttonClosePlot"
+        android:id="@+id/buttonClose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
